Resolvendo conflito de merge